# c_programming_web3

./: .gitignore
book/: CMakeLists.txt  a.out  arrays_number_counter.c  cel_to_fah.c  char_count_double.c  fah_to_cel.c  fahr_to_cel_for_loop.c  temp.c
buffers/: CMakeLists.txt  main.c
c_concepts/file_access/: main  main.c  mydata.txt
crc/: CMakeLists.txt  main.c  test.c
dsa/ll_list/: CMakeLists.txt  ll  main.c
dsa/sun/: CMakeLists.txt  main.c  sun.c  sun.h
embed/modbus/: CMakeLists.txt  modbus_sim.c
learning/: CMakeLists.txt  main.c  temp.c
learning/time/: main.c
network_internet/: tcp_server.c
network_internet/http_server/: client.c  server.c
network_internet/pico_2w_client/: CMakeLists.txt  main.c  main_2.c
network_internet/pico_2w_client/pico_2w_test/: CMakeLists.txt  main.c
network_internet/simple_echo_server/: main.c  server  sock.txt  test.c  time.txt  time_doc.txt
network_internet/tcp_server/: CMakeLists.txt  tcp_server.c
operating_systems/synchronization/: CMakeLists.txt  main.c
projects/7_Seg_clock/: digital-clock  digital-clock.c  main.c  segment.c  segment.h  segment.h.gch  time.c
projects/calculator/: CMakeLists.txt  calc.c  calc.h  main.c
projects/ez_log/: CMakeLists.txt  ez_logger.c  ez_logger.h  log.txt  log_parser.c  log_parser.h  main.c
projects/json_parser/: CMakeLists.txt  main.c
projects/log_parser/: CMakeLists.txt  log.txt  log_parser.c  log_parser.h  main.c
projects/string_reversal/: a.out  my_sr.c
random/: a.out  main.c  rand_ll.c
random_test/: a.out  num_pyramid.c  test.c
(+30 files in other folders)
